# rangetools

./: .gitignore  .gitlab-ci.yml  ReadMe.md  setup.cfg
rangeslicetools/: __init__.py  diff.py  tree.py  utils.py  viz.py
tests/: tests.py
