[metadata]
name = rangeslicetools
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/rangeslicetools.py
download_url = https://gitlab.com/KOLANICH/rangeslicetools.py/-/jobs/artifacts/master/raw/wheels/rangeslicetools-0.CI-py3-none-any.whl?job=build
description = A library to manipulate ranges and slices
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = range, slice
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

project_urls =
	Bug Tracker = https://gitlab.com/KOLANICH/rangeslicetools.py/issues
	CI Pipeline & static analysis = https://gitlab.com/KOLANICH/rangeslicetools.py/pipelines/master/latest
	libraries.io = https://libraries.io/github/KOLANICH/rangeslicetools.py

[options]
python_requires = >=3.4
zip_safe = True
packages = rangeslicetools
setup_requires = setuptools_scm;
test_suite = tests.tests
